--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,24 @@
-name: Build AndUEDumper
-
-on:
-  workflow_dispatch:
-  push:
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout source
-      uses: actions/checkout@v3
-      with:
-        submodules: recursive
-    - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y make git wget unzip
-    - name: Download Android NDK
-      run: |
-        wget https://dl.google.com/android/repository/android-ndk-r25c-linux.zip
-        unzip android-ndk-r25c-linux.zip
-    - name: Build
-      run: |
-        export NDK_HOME=$GITHUB_WORKSPACE/android-ndk-r25c
-        make clean && make
-      working-directory: ./AndUEDumper
-    - name: Upload build artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: AndUEDumper-build
-        path: AndUEDumper/build/
-        
+- name: Install dependencies
+  # Memperbarui dan menginstal paket yang diperlukan untuk kompilasi
+  run: sudo apt-get update && sudo apt-get install -y make git wget unzip
+  
+- name: Download Android NDK
+  # Mengunduh dan mengekstrak Android NDK r25c
+  run: |
+    wget https://dl.google.com/android/repository/android-ndk-r25c-linux.zip
+    unzip android-ndk-r25c-linux.zip
+    
+- name: Build
+  # Menjalankan perintah make (export NDK_HOME sangat penting di sini)
+  run: |
+    export NDK_HOME=$GITHUB_WORKSPACE/android-ndk-r25c
+    make clean && make
+  working-directory: ./AndUEDumper
+  
+- name: Upload build artifact
+  # FIX: Mengganti versi actions/upload-artifact dari v3 ke V4
+  # Ini adalah perbaikan untuk error "deprecated version of actions/upload-artifact: v3"
+  uses: actions/upload-artifact@v4
+  with:
+    name: AndUEDumper-build
+    path: AndUEDumper/build/
