--- a/build.yml
+++ b/build.yml
@@ -1,29 +1,43 @@
 name: Build AndUEDumper
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout source
-      uses: actions/checkout@v3
+    - name: Checkout Source Code (recursive submodules)
+      uses: actions/checkout@v4
       with:
         submodules: recursive
-    - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y make git wget unzip
-    - name: Download Android NDK
+
+    - name: Install Dependencies
       run: |
-        wget https://dl.google.com/android/repository/android-ndk-r25c-linux.zip
-        unzip android-ndk-r25c-linux.zip
-    - name: Build
+        sudo apt-get update
+        sudo apt-get install -y make git wget unzip
+
+    - name: Download and Unzip Android NDK r25c
       run: |
-        export NDK_HOME=$GITHUB_WORKSPACE/android-ndk-r25c
-        make clean && make
+        wget -q https://dl.google.com/android/repository/android-ndk-r25c-linux.zip
+        unzip -o android-ndk-r25c-linux.zip
+        rm android-ndk-r25c-linux.zip
+
+    - name: Build Project (Using NDK)
       working-directory: ./AndUEDumper
-    - name: Upload build artifact
-      uses: actions/upload-artifact@v3
+      env:
+        NDK_HOME: ${{ github.workspace }}/android-ndk-r25c
+      run: |
+        chmod +x make
+        make clean && make
+
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v4
       with:
         name: AndUEDumper-build
         path: AndUEDumper/build/
