--- a/Test.yml
+++ b/Test.yml
@@ -2,42 +2,24 @@ name: Build AndUEDumper
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout Source Code (recursive submodules)
-      uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Set up NDK (needed for Android builds)
+      uses: android-actions/setup-ndk@v2
       with:
-        submodules: recursive
+        ndk-version: '21.4.7075529'  # Contoh versi NDK; sesuaikan bila perlu
 
-    - name: Install Dependencies
+    - name: Build AndUEDumper
       run: |
-        sudo apt-get update
-        sudo apt-get install -y make git wget unzip
-
-    - name: Download and Unzip Android NDK r25c
-      run: |
-        wget -q https://dl.google.com/android/repository/android-ndk-r25c-linux.zip
-        unzip -o android-ndk-r25c-linux.zip
-        rm android-ndk-r25c-linux.zip
-
-    - name: Build Project (Using NDK)
-      working-directory: ./AndUEDumper
-      env:
-        NDK_HOME: ${{ github.workspace }}/android-ndk-r25c
-      run: |
-        chmod +x make
+        cd AndUEDumper/AndUEDumper
         make clean && make
-
-    - name: Upload Build Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: AndUEDumper-build
-        path: AndUEDumper/build/
